# granota

./: Makefile.in  README.md  config.h.in  configure  configure.ac
docs/: semop.txt
src/: Makefile.am  Makefile.in  atomic.h  bandit.c  bandit.h  bitwise.c  bitwise.h  common.h  crashdbg.sh.in  critbit.c  critbit.h  debug.h  fuzz.c  fuzz.h  ga.c  ga.h  granota.c  jkiss.c  jkiss.h  nulist.h  progname.c  progname.h  random.c  random.h  strerr.c  strerr.h  summary.h  term.h  util.c  util.h
src/afl/: Makefile.am  Makefile.in  afl-as.h  afl-gcc.c  config.h
src/exploitable/: Makefile.am  Makefile.in  exploitable.py
src/exploitable/lib/: classifier.py
src/exploitable/lib/gdb_wrapper/: x86.py
src/gtrcommon/: atom.c  atom.h  feedback.h  files.h  hash.c  hash.h  input.h  self.c  self.h  semop.h  session.h  shmem.c  shmem.h  target.h
src/libgranota/: Makefile.am  Makefile.in  child.c  child.h  coverage.c  coverage.h  edit.c  edit.h  fd.c  fd.h  interposing.c  interposing.h  libgranota.c  libgranota.h  match.c  match.h  memfile.c  memfile.h  sig.c  sig.h  socket.c  socket.h  str.c  str.h  stream.c  stream.h  tracer.c  tracer.h
tests/clamav/: Makefile  test.ndb  zlib-nocrc.patch
vulns/: clam_wwpack_crafted_exe  clam_wwpack_heap_overflow.txt
