lib_LTLIBRARIES = libgranota.la
libgranota_la_SOURCES = child.c child.h coverage.c coverage.h edit.c edit.h fd.c fd.h interposing.c interposing.h libgranota.c libgranota.h match.c match.h memfile.c memfile.h sig.c sig.h socket.c socket.h stream.c stream.h str.c str.h tracer.c tracer.h ../atomic.h ../common.h ../gtrcommon/atom.c ../gtrcommon/atom.h ../gtrcommon/feedback.h ../gtrcommon/files.h ../gtrcommon/hash.c ../gtrcommon/hash.h ../gtrcommon/semop.h ../gtrcommon/session.h ../gtrcommon/shmem.c ../gtrcommon/shmem.h ../gtrcommon/self.c ../gtrcommon/self.h ../gtrcommon/target.h ../afl/config.h
libgranota_la_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/src/gtrcommon -DPKGLIBEXECDIR=\"$(pkglibexecdir)\"
libgranota_la_LDFLAGS = -ldl
libgranota_la_CFLAGS = -fvisibility=hidden
